fix: Progressbar изменить по z-index`у

--- a/src/components/Progressbar/Progressbar.css
+++ b/src/components/Progressbar/Progressbar.css
@@ -4,6 +4,8 @@
   margin-bottom: 123px;
   display: grid;
   grid-template-columns: minmax(100px, 1fr) 4fr;
+  position: relative;
+  z-index: 0;
 }
 .progressbar__backend {
   color: #000000;
